[gd_scene load_steps=10 format=2]

[ext_resource path="res://texture/sokoban_tilesheet@2.png" type="Texture" id=1]
[ext_resource path="res://script/character/Player.gd" type="Script" id=2]
[ext_resource path="res://texture/sword/w_longsword_cold.png" type="Texture" id=3]
[ext_resource path="res://scene/theme/main_theme.tres" type="Theme" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 44.6772, 50.7555 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1, 513, 126, 126 )

[sub_resource type="Animation" id=4]
resource_name = "melee"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("Pivot/HandPivot:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 20.0, -151.4, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Pivot/HandPivot/MeleeArea:monitoring")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ false, true, true, false ]
}

[sub_resource type="Animation" id=5]
resource_name = "ui_kill_update"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("Label2:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.4, 1.4 ), Vector2( 1, 1 ) ]
}

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 6.54702, 40.6118 )

[node name="Player" type="KinematicBody2D"]
collision_layer = 2
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -52 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -52 )
texture = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.02
autostart = true

[node name="Label" type="Label" parent="."]
margin_left = -121.0
margin_top = -163.0
margin_right = 122.0
margin_bottom = -130.0
theme = ExtResource( 4 )
text = "player"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="."]
margin_left = -149.0
margin_top = -133.0
margin_right = 151.0
margin_bottom = -99.0
rect_pivot_offset = Vector2( 150, 17 )
theme = ExtResource( 4 )
text = "score"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelOffline" type="Label" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 14.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Camera2D" type="Camera2D" parent="."]
limit_bottom = 700

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/melee = SubResource( 4 )

[node name="AnimationUI" type="AnimationPlayer" parent="."]
anims/ui_kill_update = SubResource( 5 )

[node name="Pivot" type="Node2D" parent="."]

[node name="HandPivot" type="Node2D" parent="Pivot"]
position = Vector2( -34, -19.675 )

[node name="MeleeArea" type="Area2D" parent="Pivot/HandPivot"]
position = Vector2( 0.594604, -58.6219 )
scale = Vector2( 1.322, 1.51 )
monitoring = false
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pivot/HandPivot/MeleeArea"]
shape = SubResource( 3 )

[node name="Sprite" type="Sprite" parent="Pivot/HandPivot/MeleeArea"]
rotation = -0.815069
texture = ExtResource( 3 )
